Add support to Java11/Java17/ARM64/AMD64 and use CDK