@@ -12,9 +12,12 @@
     <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <junit.version>4.12</junit.version>
+	<cdk.version>2.8.0</cdk.version>
+    <constructs.version>[10.0.0,11.0.0)</constructs.version>
   </properties>
 
 	<build>
+
 		<plugins>
 		  <plugin>
 	        <groupId>org.apache.maven.plugins</groupId>
@@ -30,6 +33,12 @@
 	          <forceJavacCompilerUse>true</forceJavacCompilerUse>
 	        </configuration>
 	      </plugin>
+
+		  <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-help-plugin</artifactId>
+	        <version>3.2.0</version>
+		  </plugin>
 
 		</plugins>
 	</build>
@@ -95,6 +104,7 @@
     <dependency>
       <groupId>io.microlam</groupId>
       <artifactId>microlam-aws-devops</artifactId>
+	  <version>0.5</version>
 	  <scope>test</scope>
     </dependency>
 
@@ -129,6 +139,26 @@
 	</dependency>
 
 	<dependency>
+        <groupId>software.amazon.awssdk</groupId>
+    	<artifactId>sts</artifactId>
+        <scope>test</scope>
+	</dependency>
+
+    <dependency>
+        <groupId>software.amazon.awscdk</groupId>
+        <artifactId>aws-cdk-lib</artifactId>
+        <version>${cdk.version}</version>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>software.constructs</groupId>
+        <artifactId>constructs</artifactId>
+        <version>${constructs.version}</version>
+        <scope>test</scope>
+    </dependency>
+
+	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<scope>test</scope>
@@ -139,9 +169,20 @@
     <profiles>
 
       <profile>
+        <id>dev</id>
+        <activation>
+			<activeByDefault>false</activeByDefault>
+        </activation>
+
+		<properties>	
+			<compile.run.goal>run</compile.run.goal> <!-- Pause and require CTRL-C for stopping --> 
+		</properties>
+      </profile>
+
+      <profile>
         <id>java</id>
         <activation>
-          <activeByDefault>true</activeByDefault>
+			<activeByDefault>false</activeByDefault>
         </activation>
 
 		<build>
@@ -164,7 +205,7 @@
 		            </configuration>
 		            <executions>
 		                <execution>
-		                    <id>aws-lambda-deployment-package</id>
+		                    <id>aws-lambda-deployment-package-java${release.version}</id>
 		                    <phase>package</phase>
 		                    <goals>
 		                        <goal>single</goal>
@@ -179,9 +220,9 @@
       <profile>
         <id>native</id>
         <activation>
-          <activeByDefault>false</activeByDefault>
+ 			<property><name>native</name></property>
         </activation>
-
+		
 		<dependencies>
 
 		    <dependency>
@@ -190,13 +231,16 @@
 		    </dependency>
 
 			<dependency>
-			   <groupId>com.amazonaws</groupId>
+			   <groupId>io.microlam</groupId>
 			   <artifactId>aws-lambda-java-runtime-interface-client</artifactId>
+			   <version>2.1.0</version>
 			</dependency>
 
 			<dependency>
 			    <groupId>io.microlam</groupId>
 				<artifactId>aws-lambda-java-runtime-interface-client-native-config</artifactId>
+				<classifier>java${native.version}</classifier>
+				<version>2.1.0_1</version>
 			</dependency>
 
 		</dependencies>
@@ -220,13 +264,86 @@
 			</plugins>
 		</build>
       </profile>
+
+
+	  <profile>
+        <id>native-java11-amd64</id>
+        <activation>
+ 		  <property>
+			<name>native</name>
+			<value>java11-amd64</value>
+		 </property>
+        </activation>
+
+		<properties>
+			<native.version>11</native.version>
+			<native.arch>amd64</native.arch>
+			<sha256>c4a1445f6047e2ca07b16b0c2180c8e84339373b4ab87ebe3166a76f943973e7</sha256>
+			<config.entryPoint.arguments></config.entryPoint.arguments>
+			<native.image.arguments></native.image.arguments>
+		</properties>
+	  </profile>
+
+	  <profile>
+        <id>native-java17-amd64</id>
+        <activation>
+ 		  <property>
+			<name>native</name>
+			<value>java17-amd64</value>
+		 </property>
+        </activation>
+		<properties>
+			<native.version>17</native.version>
+			<native.arch>amd64</native.arch>
+			<sha256>9e56de05d930b0840a84da4b34f11a6d63a1814bca1ee0f8eb32c3fb4b2ab943</sha256>
+			<config.entryPoint.arguments>--add-opens java.base/java.util=ALL-UNNAMED</config.entryPoint.arguments>
+			<native.image.arguments></native.image.arguments>
+		</properties>
+	  </profile>
+
+	  <profile>
+        <id>native-java11-arm64</id>
+        <activation>
+ 		  <property>
+			<name>native</name>
+			<value>java11-arm64</value>
+		 </property>
+        </activation>
+		<properties>
+			<native.version>11</native.version>
+			<native.arch>arm64</native.arch>
+			<sha256>ee189db79b4750ad393141b36b267638cbe7a2c0800533b9accd06a14be8ef49</sha256>
+			<config.entryPoint.arguments></config.entryPoint.arguments>
+			<native.image.arguments></native.image.arguments>
+		</properties>
+	  </profile>
+
+	  <profile>
+        <id>native-java17-arm64</id>
+        <activation>
+ 		  <property>
+			<name>native</name>
+			<value>java17-arm64</value>
+		 </property>
+        </activation>
+		<properties>
+			<native.version>17</native.version>
+			<native.arch>arm64</native.arch>
+			<sha256>31cc3aabe3e8e13b9fd75e4224464e3e41dea2e2095b9f1b795e1166af84b884</sha256>
+			<config.entryPoint.arguments>--add-opens java.base/java.util=ALL-UNNAMED</config.entryPoint.arguments>
+			<native.image.arguments>-Djdk.lang.Process.launchMechanism=vfork</native.image.arguments>
+		</properties>
+	  </profile>
+
 	  <profile>
         <id>config</id>
         <activation>
-        <activeByDefault>false</activeByDefault>
+        	<activeByDefault>false</activeByDefault>
         </activation>
+
+		
 		<build>
-			<plugins>
+		<plugins>
 		<plugin>
          <groupId>io.fabric8</groupId>
          <artifactId>docker-maven-plugin</artifactId>
@@ -234,9 +351,12 @@
 
 			<executions>
 			  <execution>
-			    <id>docker-build</id>
+			    <id>native-config-java${native.version}-${native.arch}</id>
+				<phase>package</phase>
 			    <goals>
+				   <goal>stop</goal>
 			       <goal>build</goal>
+				   <goal>run</goal>
 			    </goals>
 			  </execution>
 			</executions>
@@ -247,7 +367,7 @@
 
                 <images>
                     <image>
-                        <name>native-config</name>
+                        <name>${project.artifactId}:${project.version}-native-config-java${native.version}-${native.arch}</name>
 
                         <build>
 
@@ -262,19 +382,10 @@
 							</runCmds>
 							-->
 							
-							<from>ghcr.io/microlam-io/microlam-container:java11-graalvm21</from>
+							<from>ghcr.io/microlam-io/microlam-container-java${native.version}:v1@sha256:${sha256}</from>
 							<workdir>function</workdir>
                         	<!-- This is the same ENTRYPOINT used in a Dockerfile -->
-                            <entryPoint>
-                                <exec>
-                                    <arg>/usr/bin/aws-lambda-rie</arg>
-                                    <arg>java</arg>
-									<arg>-agentlib:native-image-agent=config-merge-dir=/function/config/,config-write-period-secs=30,config-write-initial-delay-secs=5</arg>
-                                    <arg>-jar</arg>
-                                    <arg>${project.artifactId}-${project.version}.jar</arg>
-									<arg>${lambda.handler}</arg>
-                                </exec>
-                            </entryPoint>
+                            <entryPoint>/usr/bin/aws-lambda-rie java -agentlib:native-image-agent=config-merge-dir=/function/config/,config-write-period-secs=30,config-write-initial-delay-secs=5 ${config.entryPoint.arguments} -jar ${project.artifactId}-${project.version}.jar ${lambda.handler}</entryPoint>
 
 								<assembly>
 								  <name>function</name>
@@ -314,13 +425,38 @@
 			</plugins>
 		</build>
       </profile>
+
 	  <profile>
         <id>compile</id>
         <activation>
-        <activeByDefault>false</activeByDefault>
+        	<activeByDefault>false</activeByDefault>
         </activation>
 		<build>
 			<plugins>
+				<plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		        <artifactId>build-helper-maven-plugin</artifactId>
+		        <version>3.3.0</version>
+		        <executions>
+		          <execution>
+		            <id>attach-artifacts-java${native.version}-${native.arch}</id>
+		            <phase>verify</phase>
+		            <goals>
+		              <goal>attach-artifact</goal>
+		            </goals>
+		            <configuration>
+		              <artifacts>
+		                <artifact>
+		                  <file>${project.build.directory}/${project.artifactId}-${project.version}-aws-lambda-native.zip</file>
+		                  <type>zip</type>
+		                  <classifier>aws-lambda-native</classifier>
+		                </artifact>
+		             </artifacts>
+		            </configuration>
+		          </execution>
+		        </executions>
+		      </plugin>
+
 			<plugin>
 	         <groupId>io.fabric8</groupId>
 	         <artifactId>docker-maven-plugin</artifactId>
@@ -328,24 +464,39 @@
 	
 				<executions>
 				  <execution>
-				    <id>docker-build</id>
+				    <id>native-compile-java${native.version}-${native.arch}</id>
+					<phase>package</phase>
 				    <goals>
+					   <goal>stop</goal>
 				       <goal>build</goal>
+					   <goal>${compile.run.goal}</goal>
+				    </goals>
+				  </execution>
+				  <execution>
+				    <id>native-compile-copy-java${native.version}-${native.arch}</id>
+					<phase>verify</phase>
+				    <goals>
+					   <goal>copy</goal>
+				    </goals>
+				  </execution>
+				  <execution>
+				    <id>native-compile-stop-java${native.version}-${native.arch}</id>
+					<phase>install</phase>
+				    <goals>
+					   <goal>stop</goal>
 				    </goals>
 				  </execution>
 				</executions>
 	
 	            <configuration>
 	                <verbose>true</verbose>
-					<!--<createContainers>true</createContainers>-->
 	
 	                <images>
 	                    <image>
-	                        <name>${project.artifactId}:${project.version}</name>
+	                        <name>${project.artifactId}:${project.version}-native-compile-java${native.version}-${native.arch}</name>
 	
 	                        <build>
-	                            <!-- This is the same FROM used in a Dockerfile -->
-								<!--
+<!--
 	                            <from>ghcr.io/graalvm/graalvm-ce:java11-21</from>
 								<workdir>function</workdir>
 								<runCmds>
@@ -354,24 +505,19 @@
 									<runCmd>curl -4 -L https://github.com/aws/aws-lambda-runtime-interface-emulator/releases/latest/download/aws-lambda-rie -o /usr/bin/aws-lambda-rie</runCmd>
 									<runCmd>chmod 755 /usr/bin/aws-lambda-rie</runCmd>
 								</runCmds>
-								-->
-								<from>ghcr.io/microlam-io/microlam-container:java11-graalvm21</from>
+-->
+								<from>ghcr.io/microlam-io/microlam-container-java${native.version}:v1@sha256:${sha256}</from>
+
 								<workdir>function</workdir>
 								<runCmds>
-									<runCmd>native-image --verbose -jar ${project.artifactId}-${project.version}.jar -H:Name=func --no-fallback -H:+ReportExceptionStackTraces</runCmd>
+									<runCmd>native-image --verbose ${native.image.arguments}  -jar ${project.artifactId}-${project.version}.jar -H:Name=func --no-fallback -H:+ReportExceptionStackTraces</runCmd>
 									<runCmd>chmod 755 func</runCmd>
 									<runCmd>chmod 755 bootstrap</runCmd>
 									<runCmd>zip -j ${project.artifactId}-${project.version}-aws-lambda-native.zip bootstrap func</runCmd>
 								</runCmds>
 
-	                        	<!-- This is the same ENTRYPOINT used in a Dockerfile -->
-	                            <entryPoint>
-	                                <exec>
-	                                    <arg>/function/bootstrap</arg>
-										<arg>${lambda.handler}</arg>
-	                                </exec>
-	                            </entryPoint>
-	
+	                            <entryPoint>/function/bootstrap ${lambda.handler}</entryPoint>
+
 									<assembly>
 									  <name>function</name>
 									  <inline>
